--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "alchemy-sdk": "^3.4.1",
+    "chai": "^5.1.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
-    "hardhat-deploy": "^0.12.4"
+    "hardhat-deploy": "^0.12.4",
+    "truffle": "^5.11.5"
   }
 }
