--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "alchemy-sdk": "^3.4.1",
-    "chai": "^5.1.1",
+    "chai": "^4.5.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "hardhat-deploy": "^0.12.4",
+    "solc": "^0.8.24",
     "truffle": "^5.11.5"
   }
 }
