--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "@gnosis.pm/safe-core-sdk": "^3.2.0",
     "@gnosis.pm/safe-ethers-lib": "^1.7.0",
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "@safe-global/api-kit": "^2.4.6",
+    "@safe-global/protocol-kit": "^4.1.1",
+    "@safe-global/safe-core-sdk-types": "^5.1.0",
     "alchemy-sdk": "^3.4.1",
+    "axios": "^1.7.7",
     "chai": "^4.5.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
