--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
   },
   "homepage": "https://github.com/Sapien-io/sapien-contracts#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@openzeppelin/hardhat-upgrades": "^3.3.0",
-    "hardhat": "^2.22.11",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0",
+    "ethers": "^6.13.5",
+    "hardhat": "^2.22.19",
     "solhint": "^5.0.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "chai": "^4.3.0"
   },
   "dependencies": {
     "@gnosis.pm/safe-ethers-lib": "^1.7.0",
@@ -32,9 +37,9 @@
     "@safe-global/safe-core-sdk-types": "^5.1.0",
     "alchemy-sdk": "^3.4.1",
     "axios": "^1.7.7",
-    "chai": "^4.5.0",
     "dotenv": "^16.4.5",
-    "ethers": "^6.13.2",
+    "ethers": "^6.0.0",
+    "@ethereum-waffle/provider": "^4.0.0",
     "hardhat-deploy": "^0.12.4",
     "solc": "^0.8.24",
     "truffle": "^5.11.5"
