--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "Sapien Smart Contracts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx hardhat test"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sapien-io/sapien-contracts.git"
   },
-  "author": "Sina Deyhim",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Sapien-io/sapien-contracts/issues"
