--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "@gnosis.pm/safe-ethers-lib": "^1.7.0",
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
-    "@safe-global/api-kit": "^2.4.6",
+    "@safe-global/api-kit": "^2.5.11",
     "@safe-global/protocol-kit": "^4.1.6",
     "@safe-global/safe-core-sdk-types": "^5.1.0",
     "@safe-global/sdk-starter-kit": "^2.0.1",
+    "@safe-global/types-kit": "^2.0.1",
     "alchemy-sdk": "^3.4.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.7",
