--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,7 @@
 [profile.default]
 src = "src"
 out = "out"
+test = "test/unit"
 libs = ["lib"]
 evm_version = "prague"
 solc_version = "0.8.30"
@@ -10,3 +11,7 @@ allow_internal_expect_revert = true
 fs_permissions = [{ access = "read-write", path = "./deployments" }]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+
+[profile.invariant]
+test = "test/invariant"
