--- a/foundry.toml
+++ b/foundry.toml
@@ -17,7 +17,7 @@ fs_permissions = [{ access = "read-write", path = "./deployments" }]
 test = "test/invariant"
 
 [profile.tenderly]
-test = "test/integration"
+test = "test/tenderly"
 fork_url = "${TENDERLY_VIRTUAL_TESTNET_RPC_URL}"
 fork_block_number = 0
 
