Major updates to Multiplier

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ Contracts.sol.backup
 contracts.ts.backup
 
 local-addresses.txt
+
+# Notes
+multiplier.synctex.gz
+multiplier.out
+multiplier.log
+multiplier.aux
